--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^7.3.2",
     "@mui/x-data-grid": "^8.11.3",
     "axios": "^1.12.2",
+    "jspdf": "^3.0.3",
+    "qrcode": "^1.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
